Add title parameter for view and method to get it

--- a/templates/fullInfo.html
+++ b/templates/fullInfo.html
@@ -1,6 +1,9 @@
 {% extends "base.html"%}
+{% block title %}
+    <p>{{title}}</p>
+{% endblock %}
 {% block content %}
-    <div class="fullInfo">
+    <div id="content">
         <table>
         {% for item in instituteInfo%}
             <tr>
