Yet another thing for title(redirect to dbpedia)

--- a/templates/fullInfo.html
+++ b/templates/fullInfo.html
@@ -1,6 +1,6 @@
 {% extends "base.html"%}
 {% block title %}
-    <p>{{title}}</p>
+    <a href="{{dbpediaURL}}">{{title}}</a>
 {% endblock %}
 {% block content %}
     <div id="content">
