Fully implement short info page, fix alignments in stylesheet

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,8 @@
     <table>
         <tr>
             <th>Назва інституту</td>
-            <th id="info">Коротка інформація</td>
-            <th id="info">Повна інформація</td>
+            <th>Коротка інформація</td>
+            <th>Повна інформація</td>
         </tr>
         {% for institute in institutes %}
         <tr>
