--- a/templates/shortInfo.html
+++ b/templates/shortInfo.html
@@ -3,7 +3,7 @@
 <a href="{{dbpediaURL}}">{{instituteInfo['name']}}</a>
 {% endblock %}
 {% block content %}
-<div id="content-grid">
+<div id="content-grid" style="grid-template-columns: 75% auto;">
     <div>
         <table>
             {% if instituteInfo['name'] != ''%}
