--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,10 @@
-a,
-p,
-th,
-td,
-table {
+body {
+    margin:0px;
+}
+
+body *{
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
-    margin:0px;
 }
 
 a,
@@ -15,24 +14,25 @@ p {
 
 table {
     border-collapse: collapse;
-    margin:0px;
+    width:100%;
+    padding: 0px;
 }
 
-td,
-th {
-    padding: 15px 15px;
+td,th{
+    padding: 15px;
+    width: auto;
 }
 
-#content td, 
-#content th{
+#styled-table td,
+th{
     border: 1px solid #bbb;
 }
 
-#content tr:nth-child(even) {
+#styled-table tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-#content tr:hover {
+#styled-table tr:hover {
     background-color: #ddd;
 }
 
@@ -48,25 +48,29 @@ th {
     padding: 0px;
 }
 
-#info a{
+#info * {
     margin: 0px;
     padding: 0px;
 }
 
-#info img {
+#info img{
+    text-align: center;
+    vertical-align: middle;
     width: 40px;
 }
 
 #header {
-    padding: 30px;
+    padding: 60px;
     text-align: center;
     background: #535de1;
     color: white;
     font-size: 30px;
+    margin: 0px;
 }
 
-#header a{
+#header *{
     color: white;
+    padding: 30px;
 }
 
 #content{
@@ -74,23 +78,26 @@ th {
 }
 
 #content-grid {
-    padding: 20px 0px;
-    display: inline-grid;
-    width: 100%;
-    grid-template-columns: 75% 25%;
+    display: grid;
+    margin: 0px;
+    padding: 20px;
+    gap: 10px;
 }
 
-#instituteImg a{
-    position: relative;
-    float: right;
-    width: 100%;
-    height: 100%;
-}
-
-#instituteImg a img{
+#instituteImg a,
+#instituteImg img{
     width: 100%;
 }
 
-#content-grid table {
-    display: inline-grid;
+select{
+    height: 30px;
+    width: 100%;
+}
+
+#filter tr{
+    border: 1px solid #bbb;
+}
+
+#filter td{
+    background: #f2f2f2;
 }
