--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     margin:0px;
 }
@@ -5,11 +9,6 @@ body {
 body *{
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
-}
-
-a,
-p {
-    padding: 0px;
 }
 
 table {
@@ -60,6 +59,7 @@ th {
 }
 
 #header {
+    display: block;
     padding: 60px;
     text-align: center;
     background: #535de1;
@@ -68,9 +68,8 @@ th {
     margin: 0px;
 }
 
-#header *{
+#header a {
     color: white;
-    padding: 30px;
 }
 
 #content{
